--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.16.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
