--- a/apps/caribbean-scholar/tsconfig.json
+++ b/apps/caribbean-scholar/tsconfig.json
@@ -31,6 +31,8 @@
     "node_modules",
     "jest.config.ts",
     "src/**/*.spec.ts",
-    "src/**/*.test.ts"
+    "src/**/*.test.ts",
+    "../../apps/caribbean-scholar/.next/types/**/*.ts",
+    "../../dist/apps/caribbean-scholar/.next/types/**/*.ts"
   ]
 }
